--- a/2.2_presco.Rmd
+++ b/2.2_presco.Rmd
@@ -135,7 +135,7 @@ Row {data-height="100"}
 **`r prettyNum(round(ACM_PMI[1,3]/100,0)*100,big.mark = " ")`** places en accueil collectif en Bourgogne-Franche-Comté soit **`r prettyNum(round(ACM_PMI[8,3],1),decimal.mark = ",")` %** places pour 100 enfants nés au cours des 3 dernières années.  
 **`r prettyNum(round(ACM_PMI[9,3]/10,0)*10,big.mark = ",")`** places en accueil familial.    
 **`r prettyNum(round(ACM_PMI[10,3],1),decimal.mark = ",")` %** des enfants de moins de ans sont scolarisés.  
-**`r prettyNum(round(ACM_PMI[12,3]/100,0)*100,big.mark = " ")`** assistantes maternelles et **`r prettyNum(round(ACM_PMI[13,3]/100,0)*100,big.mark = ",")`** gardes d'enfants à domicile.
+**`r prettyNum(round(ACM_PMI[12,3]/100,0)*100,big.mark = " ")`** assistantes maternelles et **`r prettyNum(round(ACM_PMI[13,3]/100,0)*100,big.mark = " ")`** gardes d'enfants à domicile.
 
 
 Row {.tabset .tabset-fade .tabset-pills data-height="900"}
