--- a/2.3_ACM.Rmd
+++ b/2.3_ACM.Rmd
@@ -40,12 +40,12 @@ filtreACM <- function(tab=tab) {
 
 ## Row {data-height="20"}
 
-## Row {data-height="100"}
+## Row {data-height="150"}
 
 ### Données générales des accueils collectifs de mineurs avec hébergement selon la destination
 
 Les Accueils collectifs de mineurs avec hébergement regroupent les centres de vacances, les colonies de vacances...\
-**1 100** séjours avec hébergement en BFC
+**1 400** séjours avec hébergement en BFC, dont deux tiers de plus de 5 jours, ont permis de faire partir plus de 46 000 mineurs. Le Jura et l'Yonne accueillent le plus d'enfants.
 
 **(1) : Depuis le printemps 2017, les tranches d'âges 6-11 ans d'une part, 12-17 ans d'autre part ont été remplacées respectivement par les tranches d'âges 6-13 ans d'une part et 14-17 ans d'autre part par souci de cohérence avec la réglementation en vigueur au sein des accueils collectifs de mineurs.**
 
@@ -95,7 +95,7 @@ tab %>% filtreACM()  %>% sparkline::spk_add_deps()
 
 ### Comparaisons
 
-**9e** région de France en nombre de lieux d'accueils sans hébergement
+**9e** région de France en nombre de lieux d'accueils avec hébergement
 
 ```{r}
 hw_grid(
@@ -391,7 +391,7 @@ tab %>%
 
 ## Row {data-height="20"}
 
-## Row {data-height="100"}
+## Row {data-height="150"}
 
 ### Données générales des accueils de loisirs et jeunesse sans hébergement
 
@@ -799,11 +799,11 @@ hw_grid(
 
 ## Row {data-height="20"}
 
-## Row {data-height="100"}
+## Row {data-height="150"}
 
 ### Données générales des accueils de scoutisme selon la destination
 
-**3 800** places de scoutisme en Bourgogne-Franche-Comté
+**4 100** places de scoutisme en Bourgogne-Franche-Comté, principalement réparties entre la Saône-et-Loire, la Côte d'Or et le Doubs.
 
 **(1) : Depuis le printemps 2017, les tranches d'âges 6-11 ans d'une part, 12-17 ans d'autre part ont été remplacées respectivement par les tranches d'âges 6-13 ans d'une part et 14-17 ans d'autre part par souci de cohérence avec la réglementation en vigueur au sein des accueils collectifs de mineurs.**
 
