--- a/5.2_licences.Rmd
+++ b/5.2_licences.Rmd
@@ -449,7 +449,7 @@ Row {data-height="100"}
 
 ### Données générales
 
-La pratique sportive est diverse en Bourgogne-Franche-Comté. Le Jura est le département où la pratique licenciées est la plus développée avec **`r prettyNum(round(as.numeric(lic_reg[117,5])/1000,0)*1000,big.mark = " ")`** licenciés en 2020, en partie par l'importance de site de sport de nature dont les massifs montagneux. à l'inverse, l'Yonne est un des départements français où la pratique sportive est la plus faible. Cela ne signifie pas que les habitants ne pratiquent pas (cyclisme, randonnée...) mais ils sont moins souvent dans une structure.
+La pratique sportive est diverse en Bourgogne-Franche-Comté. Le Jura est le département où la pratique licenciées est la plus développée avec **21,2 %** de sa population licenciée en 2021, en partie en raison de l'importance des site de sports de nature - dont les massifs montagneux. à l'inverse, l'Yonne est un des départements français où la pratique sportive est la plus faible. Cela ne signifie pas que les habitants ne pratiquent pas (cyclisme, randonnée...) mais ils sont moins souvent dans une structure fédérale.
 
  Row {.tabset .tabset-fade .tabset-pills data-height="600"}
 -----------------------------------------------------------------------
@@ -606,13 +606,53 @@ rowheight = 550)
 ### Carte 
 
 ```{r}
+tab <- 
+  lic_dep %>%
+  select(-1,-3) %>%
+  rename(fede=1) %>%
+  filter(str_detect(fede,"Total")) %>%
+  pivot_longer(-fede,names_to = "DEP",values_to = "licences") %>%
+  pivot_wider(names_from = fede, values_from = licences) %>%
+  mutate(DEP=if_else(nchar(DEP)==1,paste0("0",DEP),DEP)) %>%
+  libelle(geo=DEP) %>%
+  rename(`unisport olympique`="Total fédérations unisport olympiques",
+         `unisport non olympique`="Total fédérations unisport non olympiques",
+         multisports=`Total fédérations multisports`,
+         `Total licences`=`Total général (hors groupements nationaux)` ) %>%
+
+  left_join(.,licdep %>% 
+              filter(DEP %in% depbfc) %>%
+              untabyl() %>%
+              adorn_totals("row",name = "BFC")  %>%
+              mutate(txlic=round(100*licences/pop,1) ) %>% 
+              select(DEP,`Taux de licences (%)`=txlic),
+            by="DEP") %>%
+  
+  left_join(., evodep %>%
+              filter(type=="total")  %>% #modifier pour les différents types de fédé
+              summarise(`évolution 2010-2021`=spk_chr(lic)),
+            by=c("DEP"="dep") ) %>%
+  
+  left_join(.,feddepsexe %>% 
+              select (DEP=1,txfem) %>% 
+              slice(3:11) %>%                 #txfem
+              mutate(`Licences féminines (%)`=color_bar('pink')
+                    (digits(txfem,1,decimal.mark=","))) ,
+            by=c("DEP") ) %>%
+  relocate(`Licences féminines (%)`,.before = `évolution 2010-2021`) %>%
+  select(-txfem) 
+
+
+
 carte <- depwgs
 carte@data <- carte@data %>% select(Département=DEP)
 carte <- merge(carte,licdep %>%
                  select(Département=DEP,Libellé,Population=pop,
                         `Total licences`=licences,`Taux de licences (%)`=txlic),
                by="Département")
-carte@data <- carte@data %>% left_join(tab %>% select(1,3:5,8:9),by=c("Département"="DEP")) 
+carte@data <- carte@data %>% left_join(tab %>%
+                                         select(1,3:5,8:9),
+                                       by=c("Département"="DEP")) 
 
 leaflet(depwgs) %>% 
   carto() %>%
