--- a/2.1_jeunesse.Rmd
+++ b/2.1_jeunesse.Rmd
@@ -42,7 +42,7 @@ credits <- function(.tbl){
 #définition des ronds proportionnels et choroplèthe
 
 pal <- colorBin("YlOrBr", domain =0:100 ,
-                bins= c(0, 12.5, 15, 17.5, 20, 100) )
+                bins= c(0, 12.5, 15, 17.5, 20,22.5, 100) )
 palevo <- colorBin("RdYlBu", domain =-10:10 ,
                  bins=c(-Inf,-2, -1, -0.5,0,0.5, 1 ,2, Inf), reverse = T)
 
@@ -158,7 +158,7 @@ carte <- merge(carte,dep_tab[-10,-1] %>%
 
 leaflet(depwgs) %>%  
   carto() %>%
-  contour_bfc() 
+ contour_depbfc(zoom= 6)
 ```
 
 
